--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,39 @@
 html, body, p {
     color: $main-text-color;
 }
+
+#property-listing {
+    .title {
+        font-size: 30x;
+        font-weight: 700;
+        margin-bottom: 20px;
+    }
+
+    .pms-card {
+        border: none;
+
+        .card-block {
+            padding-top: 8px;
+
+            .card-subtitle {
+                margin: 0;
+                font-weight: 500;
+                font-size: 12px;
+                text-transform: uppercase;
+                color: #16861a;
+            }
+
+            .card-title {
+                font-size: 10px;
+                margin: 3px 0;
+            }
+
+            .card-text {
+                font-size: 14px;
+                font-weight: 300;
+                color: #7e7e7e;
+                margin-bottom: 0px;
+            }
+        }
+    }
+}
