--- a/src/app/property/property-list/property-list.component.html
+++ b/src/app/property/property-list/property-list.component.html
@@ -1,60 +1,8 @@
 <section id="property-listing">
   <h1 class="title">My Property All Around the World </h1>
   <div class="row">
-    <div class="col-md-3 col-xs-6">
-      <div class="card pms-card">
-        <img src="http://via.placeholder.com/350x250" alt="" class="card-img-top">
-        <div class="card-block">
-          <h6 class="card-subtitle">Whole Apartment Chios </h6>
-          <h4 class="card-title">Some nice apartment</h4>
-          <p class="card-text">150 per Night</p>
-          <a href="" class="card-link">More info</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3 col-xs-6">
-      <div class="card pms-card">
-        <img src="http://via.placeholder.com/350x250" alt="" class="card-img-top">
-        <div class="card-block">
-          <h6 class="card-subtitle">Whole Apartment Chios </h6>
-          <h4 class="card-title">Some nice apartment</h4>
-          <p class="card-text">150 per Night</p>
-          <a href="" class="card-link">More info</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3 col-xs-6">
-      <div class="card pms-card">
-        <img src="http://via.placeholder.com/350x250" alt="" class="card-img-top">
-        <div class="card-block">
-          <h6 class="card-subtitle">Whole Apartment Chios </h6>
-          <h4 class="card-title">Some nice apartment</h4>
-          <p class="card-text">150 per Night</p>
-          <a href="" class="card-link">More info</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3 col-xs-6">
-      <div class="card pms-card">
-        <img src="http://via.placeholder.com/350x250" alt="" class="card-img-top">
-        <div class="card-block">
-          <h6 class="card-subtitle">Whole Apartment Chios </h6>
-          <h4 class="card-title">Some nice apartment</h4>
-          <p class="card-text">150 per Night</p>
-          <a href="" class="card-link">More info</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3 col-xs-6">
-      <div class="card pms-card">
-        <img src="http://via.placeholder.com/350x250" alt="" class="card-img-top">
-        <div class="card-block">
-          <h6 class="card-subtitle">Whole Apartment Chios </h6>
-          <h4 class="card-title">Some nice apartment</h4>
-          <p class="card-text">150 per Night</p>
-          <a href="" class="card-link">More info</a>
-        </div>
-      </div>
+    <div class="col-md-3 col-xs-6" *ngFor="let property of properties">
+      <pms-property-list-item [property]="property"></pms-property-list-item>
     </div>
   </div>
 </section>
