--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,19 @@
 html, body, p {
     color: $main-text-color;
 }
+
+.apartment {
+    color:#a72da3;
+}
+
+.condo {
+    color:#d68000;
+}
+
+.house {
+    color:#bf1818;
+}
+
+.office {
+    color: blueviolet
+}
