--- a/src/app/property/property-detail/property-detail.component.html
+++ b/src/app/property/property-detail/property-detail.component.html
@@ -1,6 +1,53 @@
 <!-- <pms-property-list-item [property]="property | async"></pms-property-list-item> -->
 
-<div *ngIf="property">
-  <p>{{ property.title}}</p>
-  <p>{{ property.city }}</p>
-</div>
+
+<section id="propertyDetails" *ngIf="property">
+  <div class="upper-section">
+    <div class="row">
+      <div class="col-md-6">
+        <img src="{{property.image}}" alt="">
+      </div>
+      <div class="col-md-6">
+        <!-- Will be replaced with map !!!! -->
+        <img src="{{property.image}}" alt="">
+      </div>
+    </div>
+  </div>
+
+  <div class="details-section">
+    <div class="row">
+      <div class="col-md-8">
+        <div class="property">
+          <h2 class="property-type {{property.category}}">{{property.shared}} {{property.category}}</h2>
+          <h1 class="property-title">{{property.title}}</h1>
+          <h2 class="property-city">{{property.city | ucwords }}</h2>
+          <div class="property-room-info">
+            <span><i class="fa fa-building"></i>{{property.bedrooms}} bedrooms</span>
+            <span><i class="fa fa-user"></i> {{property.bedrooms + 4}} guests</span>
+            <span><i class="fa fa-bed"></i> {{property.bedrooms + 2}} beds</span>
+          </div>
+          <p class="property-description">
+            {{property.description}}
+          </p>
+          <hr>
+          <div class="property-assets">
+            <h3 class="title">Assets</h3>
+            <div class="row">
+              <div class="col-md-6">
+                <span><i class="fa fa-asterisk"></i> Cooling</span>
+                <span><i class="fa fa-thermometer"></i> Heating</span>
+                <span><i class="fa fa-location-arrow"></i> Iron</span>
+              </div>
+              <div class="col-md-6">
+                <span><i class="fa fa-desktop"></i> Working area</span>
+                <span><i class="fa fa-cube"></i> Washing machine</span>
+                <span><i class="fa fa-cube"></i> Dishwasher</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4"> BOOKING</div>
+    </div>
+  </div>
+</section>
