--- a/src/app/property/property-detail/property-detail.component.html
+++ b/src/app/property/property-detail/property-detail.component.html
@@ -8,8 +8,7 @@
         <img src="{{property.image}}" alt="">
       </div>
       <div class="col-md-6">
-        <!-- Will be replaced with map !!!! -->
-        <img src="{{property.image}}" alt="">
+        <pms-map [location]="property.city + ', ' + property.street"></pms-map>
       </div>
     </div>
   </div>
