--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">ManageMyProperty</a>
+  <a class="navbar-brand" routerLink="/">ManageMyProperty</a>
   <form class="form-inline">
     <input class="form-control mr-sm-2 pms-search" type="search" placeholder="Search" aria-label="Search">
     <button class="btn btn-outline-success my-2 my-sm-0 btn-pms-search " type="submit">Search</button>
@@ -11,12 +11,12 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Login
+        <a class="nav-link" routerLink="/login">Login
           <span class="sr-only">(current)</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Register</a>
+        <a class="nav-link" routerLink="/register">Register</a>
       </li>
     </ul>
   </div>
