--- a/src/app/property/property-detail/property-detail.component.html
+++ b/src/app/property/property-detail/property-detail.component.html
@@ -46,7 +46,9 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4"> BOOKING</div>
+      <div class="col-md-4">
+        <pms-property-detail-booking [dailyPrice]="property.dailyRate" [monthlyPrice]="property.monthlyRate"></pms-property-detail-booking>
+      </div>
     </div>
   </div>
 </section>
