--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,3 +1,54 @@
-<p>
-  login works!
-</p>
+
+<section id="login">
+  <div class="pms-form">
+    <div class="row">
+      <div class="col-md-5">
+        <h1>Login</h1>
+        <div class="alert alert-success" *ngIf="notifyMessage">
+          {{ notifyMessage }}
+        </div>
+        <form [formGroup]="loginForm" (ngSubmit)="login()">
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email"
+                   class="form-control"
+                   id="email"
+                   formControlName="email">
+                   <div *ngIf="isInvalidForm('email')" class="alert alert-danger">
+                    <div *ngIf="isFieldRequired('email')">
+                      Email is required.
+                    </div>
+                    <div *ngIf="this.loginForm.controls['email'].errors.email">
+                      Email must have a valid format.
+                    </div>
+                  </div>
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password"
+                   class="form-control"
+                   id="password"
+                   formControlName="password">
+                   <div *ngIf="isInvalidForm('password')" class="alert alert-danger">
+                    <div *ngIf="isFieldRequired('password')">
+                      Password is required.
+                    </div>
+                  </div>
+          </div>
+          <button [disabled]="!loginForm.valid" class="btn btn-pms">Submit</button>
+        </form>
+        <div *ngIf="errors.length > 0" class="alert alert-danger">
+          <p *ngFor="let error of errors">
+            {{error.title}}, {{ error.message }}
+          </p>
+        </div>
+      </div>
+      <div class="col-md-6 ml-auto">
+        <div class="image-container">
+          <h2 class="catchphrase">Manage your properties in reach of few clicks.</h2>
+          <img src="assets/images/login-image.jpg" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
