--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -3,28 +3,92 @@
     <div class="row">
       <div class="col-md-5">
         <h1 class="page-title">Register</h1>
-        <form>
+        <form #regForm="ngForm">
           <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" class="form-control" id="username">
+            <input [(ngModel)]="registerForm.username" 
+                   #username="ngModel"
+                   name="username" 
+                   type="text" 
+                   class="form-control" 
+                   id="username"
+                   minlength="4"
+                   required>
+                  <div *ngIf="username.invalid && (username.dirty || username.touched)" class="alert alert-danger">
+                    <div *ngIf="username.errors.required">
+                      Username is required.
+                    </div>
+                    <div *ngIf="username.errors.minlength">
+                      Username must be at least 4 characters long.
+                    </div>
+                  </div>
           </div>
           <div class="form-group">
             <label for="email">Email</label>
-            <input type="text" class="form-control" id="email">
+            <input [(ngModel)]="registerForm.email"
+                   #email="ngModel"
+                   name="email" 
+                   type="email" 
+                   class="form-control" 
+                   id="email"
+                   required>
+                  <div *ngIf="email.invalid && (email.dirty || email.touched)" class="alert alert-danger">
+                    <div *ngIf="email.errors.required">
+                      Email is required.
+                    </div>
+                  </div>
           </div>
           <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" class="form-control" id="password">
+            <input [(ngModel)]="registerForm.password" 
+                   #password="ngModel"
+                   name="password" 
+                   type="password" 
+                   class="form-control" 
+                   id="password"
+                   minlength="6"
+                   required>
+                  <div *ngIf="password.invalid && (password.dirty || password.touched)" class="alert alert-danger">
+                    <div *ngIf="password.errors.required">
+                      Password is required.
+                    </div>
+                    <div *ngIf="password.errors.minlength">
+                      Password must be at least 6 characters long.
+                    </div>
+                  </div>
           </div>
           <div class="form-group">
             <label for="passwordConfirmation">Confirm Password</label>
-            <input type="password" class="form-control" id="passwordConfirmation">
+            <input [(ngModel)]="registerForm.passwordConfirmation" 
+                   #passwordConfirmation="ngModel"
+                   name="passwordConfirmation" 
+                   type="password" 
+                   class="form-control" 
+                   id="passwordConfirmation"
+                   minlength="6"
+                   required>
+                  <div *ngIf="passwordConfirmation.invalid && (passwordConfirmation.dirty || passwordConfirmation.touched)" class="alert alert-danger">
+                    <div *ngIf="passwordConfirmation.errors.required">
+                      Password Confirmation is required.
+                    </div>
+                    <div *ngIf="passwordConfirmation.errors.minlength">
+                      Password must be at least 6 characters long.
+                    </div>
+                  </div>
           </div>
-          <button class="btn btn-pms" type="submit">Submit</button>
+          <button [disabled]="!regForm.form.valid" (click)="register()" class="btn btn-pms" type="submit">Submit</button>
         </form>
+        <div *ngIf="errors.length > 0" class="alert alert-danger">
+          <p *ngFor="let error of errors">
+            {{error.title}}, {{ error.message }}
+          </p>
+        </div>
       </div>
       <div class="col-md-6 ml-auto">
-        TEXT TO PUT HERE
+        <div class="image-container">
+          <h2 class="catchphrase">As a user you have access to my properties in the world.</h2>
+          <img src="assets/images/register-image.jpg" alt="">
+        </div>
       </div>
     </div>
   </div>
