--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -10,14 +10,26 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/login">Login
-          <span class="sr-only">(current)</span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/register">Register</a>
-      </li>
+      <ng-container *ngIf="!auth.isAuthenticated()">
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="/login">Login
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/register">Register</a>
+        </li>
+      </ng-container>
+      <ng-container *ngIf="auth.isAuthenticated()">
+        <li class="nav-item">
+          <i class="fa fa-user fa-2x profile-img"></i> {{ auth.getUsername() }}
+        </li>
+        <li class="nav-item">
+          <a class="nav-link clickable" (click)="logout()">
+            <i class="fa fa-sign-out fa-2x logout"></i>
+          </a>
+        </li>
+      </ng-container>
     </ul>
   </div>
 </nav>
